--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Color Drifter Support</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <img src="logo.png" alt="Color Drifter Logo" class="logo">
+        <h1>Welcome to Color Drifter Support</h1>
+        <p>For any issues, questions, or feedback related to Color Drifter, please reach out to us!</p>
+        <div class="contact">
+            <h2>Contact Details</h2>
+            <p>Email: <a href="mailto:trivedijyoti1234@gmail.com">trivedijyoti1234@gmail.com</a></p>
+        </div>
+    </div>
+</body>
+</html>
 
