--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Color Drifter Logo" class="logo">
+        <img src="Menu Diamond.png" alt="Color Drifter Logo" class="logo">
         <h1>Welcome to Color Drifter Support</h1>
         <p>For any issues, questions, or feedback related to Color Drifter, please reach out to us!</p>
         <div class="contact">
